<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_button"
        android:icon="@android:drawable/presence_invisible"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/cinemas_button"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/cinemas"
        app:showAsAction="always" />

    <item
        android:id="@+id/note_button"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/note"
        app:showAsAction="always" />

    <item
        android:id="@+id/search_button"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_button"
        app:showAsAction="always" />
</menu>