<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.SearchMovieFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/movie_title"
            android:textSize="@dimen/movie_title" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_adult_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/movie_title"
            android:text="@string/switch_kids"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/search_button"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/found_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>