<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.MovieDescriptionFragment">

    <TextView
        android:id="@+id/movie_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_start"
        android:textSize="@dimen/movie_title"
        tools:text="@string/hello_blank_fragment" />

    <EditText
        android:id="@+id/movie_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/movie_title" />

    <TextView
        android:id="@+id/tv_movie_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/movie_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/delete_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_note"
            android:textSize="@dimen/movie_title" />

        <Button
            android:id="@+id/save_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_note"
            android:textSize="@dimen/movie_title" />

    </LinearLayout>

</LinearLayout>